fix: image 컴포넌트로 z-index 적용해서 select가 뒤로가는 에러 해결 #128

--- a/src/app/concert/[id]/_shared/components/concert-info/concert-info.module.scss
+++ b/src/app/concert/[id]/_shared/components/concert-info/concert-info.module.scss
@@ -29,12 +29,13 @@
     position: relative;
     width: 100%;
     margin-top: -123.5px;
-    z-index: 5;
     display: flex;
     flex-direction: column;
     padding: 20px;
+    gap: 24px;
 
     .image {
+      z-index: 5;
       border-radius: 12px;
     }
   }
